--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,80 @@
-version: '3.9'
+version: '3.8'
 
 services:
   postgres:
-    image: postgres:15
-    container_name: intellexa_postgres
-    restart: unless-stopped
+    build:
+      context: ./docker/postgres
+    container_name: intellexa-postgres
+    environment:
+      POSTGRES_USER: intellexa
+      POSTGRES_PASSWORD: intellexa123
+      POSTGRES_DB: intellexa
+    volumes:
+      - ./data/postgres:/var/lib/postgresql/data
+      - ./scripts/init-postgres.sh:/docker-entrypoint-initdb.d/init.sh
+    networks:
+      - intellexa-network
     ports:
       - "5432:5432"
+
+  timescale:
+    image: timescale/timescaledb:2.11.0-pg15
+    container_name: intellexa-timescale
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: timeseries
+      POSTGRES_PASSWORD: timeseries123
+      POSTGRES_DB: metrics
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - ./scripts/init-timescale.sh:/docker-entrypoint-initdb.d/init.sh
+    networks:
+      - intellexa-network
+    ports:
+      - "5433:5432"
+
+  weaviate:
+    image: semitechnologies/weaviate:latest
+    container_name: intellexa-weaviate
+    environment:
+      AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
+      PERSISTENCE_DATA_PATH: '/var/lib/weaviate'
+      QUERY_DEFAULTS_LIMIT: 25
+      CLUSTER_HOSTNAME: 'node1'
+    volumes:
+      - ./data/weaviate:/var/lib/weaviate
+      - ./scripts/init-weaviate.json:/etc/weaviate/schema.json
+    networks:
+      - intellexa-network
+    ports:
+      - "8080:8080"
+    depends_on:
+      - redis
 
   redis:
-    image: redis:7
-    container_name: intellexa_redis
-    restart: unless-stopped
+    image: redis:7-alpine
+    container_name: intellexa-redis
+    command: redis-server --save 60 1 --loglevel warning
+    volumes:
+      - ./data/redis:/data
+    networks:
+      - intellexa-network
     ports:
       - "6379:6379"
 
   minio:
-    image: minio/minio:latest
-    container_name: intellexa_minio
+    image: minio/minio:RELEASE.2023-08-23T10-07-06Z
+    container_name: intellexa-minio
+    environment:
+      MINIO_ROOT_USER: intellexa
+      MINIO_ROOT_PASSWORD: intellexa123
+    command: server /data --console-address ":9001"
+    volumes:
+      - ./data/minio:/data
+    networks:
+      - intellexa-network
     ports:
       - "9000:9000"
       - "9001:9001"
-    environment:
-      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
-      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
-    command: server /data --console-address ":9001"
-    volumes:
-      - minio-data:/data
 
-volumes:
-  pgdata:
-  minio-data:
+networks:
+  intellexa-network:
+    driver: bridge
