--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,30 @@
 services:
   postgres:
-    image: postgres:${POSTGRES_VERSION}
+    image: postgres:15-alpine
+    container_name: intellexa-postgres
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: intellexa
+      POSTGRES_PASSWORD: intellexa123
+      POSTGRES_DB: intellexa
     volumes:
-      - ./data/postgres:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
       - ./scripts/init-postgres.sh:/docker-entrypoint-initdb.d/init.sh
     networks:
       - intellexa-network
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   timescale:
-    image: timescale/timescaledb:${TIMESCALE_VERSION}
+    image: timescale/timescaledb:latest-pg15
+    container_name: intellexa-timescale
     environment:
-      POSTGRES_USER: ${TIMESCALE_USER}
-      POSTGRES_PASSWORD: ${TIMESCALE_PASSWORD}
+      POSTGRES_USER: timeseries
+      POSTGRES_PASSWORD: timeseries123
       POSTGRES_DB: metrics
     volumes:
       - ./scripts/init-timescale.sh:/docker-entrypoint-initdb.d/init.sh
@@ -27,42 +34,57 @@ services:
       - "5433:5432"
 
   weaviate:
-    image: semitechnologies/weaviate:${WEAVIATE_VERSION}
+    image: semitechnologies/weaviate:1.23.6
+    container_name: intellexa-weaviate
     environment:
       AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
       PERSISTENCE_DATA_PATH: '/var/lib/weaviate'
+      QUERY_DEFAULTS_LIMIT: 25
+      CLUSTER_HOSTNAME: 'node1'
+      ENABLE_MODULES: "text2vec-openai"
+      DEFAULT_VECTORIZER_MODULE: "text2vec-openai"
     volumes:
-      - ./data/weaviate:/var/lib/weaviate
+      - weaviate-data:/var/lib/weaviate
       - ./scripts/init-weaviate.json:/etc/weaviate/schema.json
     networks:
       - intellexa-network
     ports:
-      - "8082:8080"
+      - "8081:8080"
+    depends_on:
+      - redis
 
   redis:
-    image: redis:${REDIS_VERSION}
+    image: redis:7-alpine
+    container_name: intellexa-redis
     command: redis-server --save 60 1 --loglevel warning
     volumes:
-      - ./data/redis:/data
+      - redis-data:/data
     networks:
       - intellexa-network
     ports:
       - "6379:6379"
 
   minio:
-    image: minio/minio:${MINIO_VERSION}
+    image: minio/minio:RELEASE.2023-08-23T10-07-06Z
+    container_name: intellexa-minio
     environment:
-      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
-      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+      MINIO_ROOT_USER: intellexa
+      MINIO_ROOT_PASSWORD: intellexa123
     command: server /data --console-address ":9001"
     volumes:
-      - ./data/minio:/data
+      - minio-data:/data
     networks:
       - intellexa-network
     ports:
-      - "9002:9000"
-      - "9003:9001"
+      - "9000:9000"
+      - "9001:9001"
 
 networks:
   intellexa-network:
     driver: bridge
+
+volumes:
+  postgres-data:
+  weaviate-data:
+  redis-data:
+  minio-data:
