--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   postgres:
-    image: postgres:15-alpine
+    build:
+      context: ./docker/postgres
+    image: intellexa-devops-postgres:latest
     container_name: intellexa-postgres
     environment:
       POSTGRES_USER: intellexa
@@ -20,7 +22,7 @@ services:
       retries: 5
 
   timescale:
-    image: timescale/timescaledb:latest-pg15
+    image: timescale/timescaledb:2.11.0-pg15
     container_name: intellexa-timescale
     environment:
       POSTGRES_USER: timeseries
@@ -65,7 +67,7 @@ services:
       - "6379:6379"
 
   minio:
-    image: minio/minio:RELEASE.2023-08-23T10-07-06Z
+    image: minio/minio:latest
     container_name: intellexa-minio
     environment:
       MINIO_ROOT_USER: intellexa
